@@ -18,7 +18,7 @@ namespace gui
 
 //! constructor
 CGUISpinBox::CGUISpinBox(const wchar_t* text, bool border,IGUIEnvironment* environment,
-			IGUIElement* parent, s32 id, const core::rect<s32>& rectangle)
+			IGUIElement* parent, s32 id, const core::rect<s32>& rectangle, bool hasButtons)
 : IGUISpinBox(environment, parent, id, rectangle),
 	EditBox(0), ButtonSpinUp(0), ButtonSpinDown(0), StepSize(1.f),
 	RangeMin(-FLT_MAX), RangeMax(FLT_MAX), FormatString(L"%f"),
@@ -32,21 +32,28 @@ CGUISpinBox::CGUISpinBox(const wchar_t* text, bool border,IGUIEnvironment* envir
 	CurrentIconColor = video::SColor(255,255,255,255);
 	s32 ButtonWidth = 16;
 
-	ButtonSpinDown = Environment->addButton(
-		core::rect<s32>(rectangle.getWidth() - ButtonWidth, rectangle.getHeight()/2 +1,
-						rectangle.getWidth(), rectangle.getHeight()), this);
-	ButtonSpinDown->grab();
-	ButtonSpinDown->setSubElement(true);
-	ButtonSpinDown->setTabStop(false);
-	ButtonSpinDown->setAlignment(EGUIA_LOWERRIGHT, EGUIA_LOWERRIGHT, EGUIA_CENTER, EGUIA_LOWERRIGHT);
+	if ( hasButtons )
+	{
+		ButtonSpinDown = Environment->addButton(
+			core::rect<s32>(rectangle.getWidth() - ButtonWidth, rectangle.getHeight()/2 +1,
+							rectangle.getWidth(), rectangle.getHeight()), this);
+		ButtonSpinDown->grab();
+		ButtonSpinDown->setSubElement(true);
+		ButtonSpinDown->setTabStop(false);
+		ButtonSpinDown->setAlignment(EGUIA_LOWERRIGHT, EGUIA_LOWERRIGHT, EGUIA_CENTER, EGUIA_LOWERRIGHT);
 
-	ButtonSpinUp = Environment->addButton(
-		core::rect<s32>(rectangle.getWidth() - ButtonWidth, 0,
-						rectangle.getWidth(), rectangle.getHeight()/2), this);
-	ButtonSpinUp->grab();
-	ButtonSpinUp->setSubElement(true);
-	ButtonSpinUp->setTabStop(false);
-	ButtonSpinUp->setAlignment(EGUIA_LOWERRIGHT, EGUIA_LOWERRIGHT, EGUIA_UPPERLEFT, EGUIA_CENTER);
+		ButtonSpinUp = Environment->addButton(
+			core::rect<s32>(rectangle.getWidth() - ButtonWidth, 0,
+							rectangle.getWidth(), rectangle.getHeight()/2), this);
+		ButtonSpinUp->grab();
+		ButtonSpinUp->setSubElement(true);
+		ButtonSpinUp->setTabStop(false);
+		ButtonSpinUp->setAlignment(EGUIA_LOWERRIGHT, EGUIA_LOWERRIGHT, EGUIA_UPPERLEFT, EGUIA_CENTER);
+	}
+	else
+	{
+		ButtonWidth = 0;
+	}
 
 	const core::rect<s32> rectEdit(0, 0, rectangle.getWidth() - ButtonWidth - 1, rectangle.getHeight());
 	EditBox = Environment->addEditBox(text, rectEdit, border, this, -1);
@@ -71,6 +78,9 @@ CGUISpinBox::~CGUISpinBox()
 
 void CGUISpinBox::refreshSprites()
 {
+	if ( !ButtonSpinDown )
+		return;
+
 	IGUISpriteBank *sb = 0;
 	if (Environment && Environment->getSkin())
 	{
